# syntinct

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: category.rs  color.rs  lib.rs  main.rs  neovim.rs  style.rs  syntark.rs  thematic.rs  theme.lua  theme.rs
