[package]
name = "syntinct"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
enum-iterator = "1.4.1"
heck = "0.4.1"
palette = "0.7.3"
serde = { version = "1.0.194", features = ["derive"] }
thiserror = "1.0.56"
